# glitter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  external.cmake  index.html  pa0.html  pa1.html  pa2.html  pa3.html  pa4.html  pa5.html  project.html
css/: cgi.css
docs/: Doxyfile.in
examples/: MinimalApplication.cpp  MinimalApplication.hpp  PA1Application.cpp  PA1Application.hpp  PA2Application.cpp  PA2Application.hpp  PA3Application.cpp  PA3Application.hpp  PA4Application.cpp  PA4Application.hpp  PA5Application.cpp  PA5Application.hpp  ProjectApplication.cpp  ProjectApplication.hpp  main.cpp  obj2glitter.cpp
js/: cgi.js
meshes/: checkerboard.xcf  cornell_box.mtl
meshes/Pallet/: Bswap_HPBake_Planks.mtl  pallet_03.blend
meshes/Tron/: TronLightCycle.mtl
meshes/normalMappedCube/: cube.mtl
rubik/: GameStage.cpp  GameStage.hpp  README.md  RubikApplication.cpp  RubikApplication.hpp  RubikLogic.cpp  RubikLogic.hpp  RubikRenderer.cpp  RubikRenderer.hpp  TextPrinter.cpp  TextPrinter.hpp  font.f.glsl  font.v.glsl  hud.f.glsl  hud.v.glsl  main.cpp  rubik.f.glsl  rubik.v.glsl
shaders/: simple.f.glsl  simple.v.glsl  simple2d.f.glsl  simple3d.f.glsl  simple3d.v.glsl  simplemat.f.glsl  simplemat.v.glsl  texture.f.glsl  texture.v.glsl
src/: Application.cpp  Application.hpp  AttributeProperties.hpp  Image.hpp  ObjLoader.cpp  ObjLoader.hpp  Serialize.cpp  Serialize.hpp  SimpleMaterial.hpp  glApi.cpp  glApi.hpp  utils.cpp  utils.hpp
